[package]
name = "voodoo"
version = "0.0.1"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
description = "An intuitive, idiomatic, unopinionated, zero-overhead Vulkan API"
# documentation = "https://doc.cogciprocate.com/voodoo"
homepage = "https://github.com/cogciprocate/voodoo"
repository = "https://github.com/cogciprocate/voodoo"
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = ["target/*", "*.png", "bak/*"]
# keywords = ["vulkan", "gpu", "gpgpu", "async"]
# categories = ["asynchronous", "concurrency", "science", "api-bindings"]

[features]
# Experimental and unstable Vulkan stuff.
experimental = ["vks/experimental"]
# Partially implemented and unimplemented stuff.
unimplemented = []

# default = ["experimental"]

[dependencies]
winit = "*"
libloading = "*"
# smallvec = "*"
# smallvec = { git = "https://github.com/servo/rust-smallvec" }
smallvec = { git = "https://github.com/c0gent/rust-smallvec" }
vks = { git = "https://gitlab.com/dennis-hamester/vks.git" }
# vks = { path = "../vks" }
libc = "*"
cgmath = "*"
image = "*"
tobj = "*"
ordered-float = "*"
bitflags = "1"
enum-primitive-derive = "*"
num-traits = "*"