[package]
name = "voodoo_winit"
version = "0.1.1"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]
description = "Voodoo - Winit glue"
documentation = "https://docs.rs/voodoo_winit"
homepage = "https://github.com/cogciprocate/voodoo/voodoo_winit"
repository = "https://github.com/cogciprocate/voodoo/voodoo_winit"
readme = "README.md"
license = "MIT/Apache-2.0"
exclude = ["target/*", "*.png", "bak/*"]
keywords = ["vulkan", "gpu", "gpgpu", "graphics"]
categories = ["rendering::graphics-api"]

[dependencies]
winit = "0.10"
voodoo = { version = "0.3", path = ".." }
